# dictation

./: .gitignore  CHANGELOG.md  Package.swift  README.md  SWIFT_ARCHITECTURE.md  Swift_Dictation.icns  TESTING.md  TODO.md  build-swift.sh  create_icon.py  dictation.py  pyproject.toml  setup.py
Dictation/: AppDelegate.swift  AudioRecorder.swift  Info.plist  KeyboardMonitor.swift  Models.swift  Preferences.swift  SingleInstanceLock.swift  TextInjector.swift  TranscriptionService.swift
Dictation.xcodeproj/: project.pbxproj
